<resources>
    <string name="app_name">Dietary</string>
    <string name="Email">Email</string>
    <string name="password">Haslo</string>
    <string name="login">Zaloguj się</string>
    <string name="register">Zarejestruj się</string>
    <string name="signout">Wyloguj się</string>
    <string name="search">Wyszukaj użytkownika</string>
    <string name="firstname">Imie</string>
    <string name="lastname">Nazwisko</string>
    <string name="passError">Hasło powinno składać się przynajmniej z 6 znaków</string>
    <string name="blankError">Pole email i hasło nie mogą być puste</string>
    <string name="createAccountAction">Tworzę konto...</string>
    <string name="emailVerificationError">Błąd podczas wysyłania maila weryfikacyjnego</string>
    <string name="emailVerificationGood">Wysłano email weryfikacyjny na adres: </string>
    <string name="loginError">Hasło lub Email niepoprawne</string>
    <string name="noEmailVerification">Email nie został zweryfikowany</string>
    <string name="profileOptions">Ustawienia profilu</string>
    <string name="coaches">Trenerzy</string>
    <string name="proteges">Podopieczni</string>
    <string name="diet">Dieta</string>
    <string name="exercises">Trening</string>
    <string name="nick">Nazwa Użytkownika</string>
    <string name="userSearch">Wyszukaj użytkownika</string>
    <string name="userSearchNick">Podaj nazwę użytkownika</string>
    <string name="descriptionDiter">Opis posiłku</string>
    <string name="dietWarning">Uwagi</string>
    <string name="uploadDiet">Dodaj wpis</string>
    <string name="weight">Waga(kg)</string>
    <string name="exerciseDesc">Opis treningu</string>
    <string name="addDiet">Dodaj wpis</string>
    <string name="checkDiets">Wyświetl dietę</string>
    <string name="datePicker">Wybierz datę</string>
    <string name="exerView">Wyświetl trening</string>
    <string name="addExer">Dodaj Trening</string>
    <string name="logowanie">Logowanie</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="menu_home">Ekran główny</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_whole_app_drawer">WholeAppDrawer</string>
    <string name="title_activity_nav_draw">NavDraw</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="passRes">Zresetuj hasło</string>
    <string name="nickChange">Zmień nazwę użytkownika</string>
    <string name="invites">Zaproszenia</string>
    <string name="profile">Profil</string>
    <string name="noone">Nikt</string>
    <string name="friends">Podopieczni i Trenerzy</string>
    <string name="all">Wszyscy</string>
    <string name="meal_desc">Opis posiłku</string>
    <string name="mealwarn">Uwagi do posiłku</string>
    <string name="exerNumber">Numer Treningu</string>
    <string name="exerWarm">Uwagi do treningu</string>
    <string name="coach">Trener</string>
    <string name="protege">Podopieczny</string>
    <string name="noUser">Nie znaleziono użytkownika.</string>
    <string name="blankDietError">Opis posiłku nie może byc pusty</string>
    <string name="kcal">kcal</string>
    <string name="descriptionWorkout">Opis ćwiczenia</string>
    <string name="checkWorkouts">Historia treningów</string>
    <string name="nutsAllergy">Alegria na orzechy</string>
    <string name="lactoseAllergy">Alergia na laktozę</string>
    <string name="exerciseMuscle">Grupy mięsniowe</string>
    <string name="reps">Powtórzenia</string>
    <string name="sets">Serie</string>
    <string name="blankExeError">Pole opis nie może być puste</string>
    <string name="uploadExercise">Dodaj ćwiczenie</string>
    <string name="uploadMeal">Dodaj posiłek</string>
    <string name="back">Anuluj</string>
    <string name="messageContent">Treść wiadomości</string>
    <string name="sendMail">Wyślij wiadomość</string>
    <string name="emptyMessageError">Wiadomość nie może być pusta</string>
    <string name="mailSent">Wiadomość wysłana!</string>
    <string name="addMeal">Dodaj Posiłek</string>
    <string name="name">Nazwa</string>
    <string name="category">kategoria</string>
    <string name="mealList">Lista posiłków w diecie</string>
    <string name="blankMealWarn">Pola opis i kalorie nie mogą być puste</string>
    <string name="exerciseAdded">Ćwiczenie dodane!</string>
    <string name="checkProfile">Profil</string>
    <string name="post_added">Dodano post</string>
    <string name="diet_change">Dieta zapisana</string>
    <string name="mealAddedToDiet">Dodano posiłek do diety</string>
    <string name="diet_extists_error">Taka dieta już istnieje</string>
    <string name="messages">Wiadomości</string>
    <string name="pickDate">Wybierz date</string>
</resources>