<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="187dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="182dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.069767445" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4117647" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="37dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"

        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bottom_left_135" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:orientation="vertical"
        android:paddingRight="3dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline13">

        <LinearLayout

            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/elipse"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/setProfilePicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/ic_account_photo"
                android:layout_marginTop="30dp">

            </de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="200dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#1100"
                android:text="@string/nick"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/nicknameProfileTV"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="#0000"
                android:textSize="15dp"
                android:layout_marginTop="20dp"
                android:inputType="textPersonName"
                android:hint="Nick"
                android:textAlignment="center"/>


            <TextView
                android:id="@+id/textView5"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textAlignment="center"
                android:background="#1100"
                android:text="@string/Email" />

            <TextView
                android:id="@+id/emailProfileTV"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="15dp"
                android:inputType="textPersonName"
                android:background="#0000"
                android:layout_marginTop="20dp"
                android:textAlignment="center"

                android:text="Name" />

            <TextView
                android:id="@+id/passRes"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:textSize="15sp"
                android:text="@string/passRes"
                android:textAlignment="center"
                />

            <Button
                android:id="@+id/All"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:textSize="15sp"
                android:background="@drawable/buttonshapewhite"
                android:text="@string/all" />

            <Button
                android:id="@+id/friends"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/buttonshapewhite"
                android:text="@string/friends"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/noone"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:textSize="15sp"
                android:background="@drawable/buttonshapewhite"
                android:text="@string/noone" />


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>